src/test/ui/type-alias-impl-trait/issue-53096.full_tait.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-53096.rs:4:32
   |
LL | #![cfg_attr(full_tait, feature(impl_trait_in_bindings, type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-53096.rs:4:56
   |
LL | #![cfg_attr(full_tait, feature(impl_trait_in_bindings, type_alias_impl_trait))]
   |                                                        ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-53096.rs:14:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error; 2 warnings emitted

